--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,11 @@ repositories {
 
 dependencies {
     // Use JUnit test framework.
-    testImplementation(platform('org.junit:junit-bom:5.8.0'))
-    testImplementation('org.junit.jupiter:junit-jupiter')
-    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.4'
 
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 }
 
 test {
